--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/confirmacion-compra/confirmacion-compra.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/tienda/confirmacion-compra/confirmacion-compra.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="text-center">
-        <input type="button" value="Confirmar" class="btn mr-1 btn-primary" style="width:110px" />
+        <input type="button" value="Confirmar" class="btn mr-1 btn-primary" (click)="comprar()" style="width:110px" />
         <input type="button" 
                value="Cancelar" 
                class="btn mr-1 btn-danger" 
