--- a/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
+++ b/05-MEAN/02-Tienda/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
@@ -3,11 +3,16 @@
     </ul>
 </div> 
 
-<div class="row">
+<div class="container-fluid">
 
-    <div class="col-sm-8 offset-sm-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4  ">
-        <router-outlet></router-outlet>
+    <div class="row">
+
+        <div class="col-sm-8 offset-sm-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4  ">
+            <router-outlet></router-outlet>
+        </div>
+    
     </div>
-
+    
 </div>
+
 
