No se me ocurre nada

--- a/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
+++ b/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/usuarios/login/login.component.html
@@ -10,13 +10,13 @@
 
     <div class="form-horizontal" id="formulario">
         <div class="form-group">
-        <label class="control-label col-xs-2" for="login">Login</label>
+        <label class="control-label col-xs-2" for="login">Correo</label>
         <div class="col-xs-10">
             <input id="login" type="text" [(ngModel)]="login" class="form-control"/>
         </div>
         </div>   
         <div class="form-group">
-        <label class="control-label col-xs-2" for="pw">Pw</label>
+        <label class="control-label col-xs-2" for="pw">Password</label>
         <div class="col-xs-10">
             <input id="pw" type="text" [(ngModel)]="password" (keyup)="comprobarIntro($event)" class="form-control"/>
         </div>
