--- a/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
+++ b/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/maquetacion/maquetacion-login/maquetacion-login.component.html
@@ -7,11 +7,10 @@
 
     <div class="row">
 
-        <div class="col-sm-4 offset-sm-4">
+        <div class="col-sm-8 offset-sm-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4  ">
             <router-outlet></router-outlet>
         </div>
     
     </div>
-
+    
 </div>
-
