Seguimos con nuestra vida de siempre, disfrutando con el JS

--- a/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/contactos/contactos.component.html
+++ b/08_MongoDB_Realm/02_Agenda_Usuarios/Angular/src/app/componentes/contactos/contactos.component.html
@@ -1,9 +1,9 @@
 
 <div class="text-center mt-2 mb-2">
-    <button class="btn btn-primary mr-1" id="btnInsertar">Insertar</button>
-    <button class="btn btn-primary mr-1" id="btnModificar">Modificar</button>
-    <button class="btn btn-danger  mr-1" id="btnBorrar">Borrar</button>
-    <button class="btn btn-warning mr-1" id="btnVaciar">Vaciar</button>
+    <button class="btn btn-primary mr-1" id="btnInsertar" (click)="insertar()">Insertar</button>
+    <button class="btn btn-primary mr-1" id="btnModificar" (click)="modificar()">Modificar</button>
+    <button class="btn btn-danger  mr-1" id="btnBorrar" (click)="borrar()">Borrar</button>
+    <button class="btn btn-warning mr-1" id="btnVaciar" (click)="vaciar()">Vaciar</button>
 </div>
 
 <div class="alert alert-danger alert-dismissible fade show" role="alert" id="alertError">
@@ -13,41 +13,45 @@
     </button>
 </div>
 
-<div class="row">
-    <div class="col-sm-12 col-lg-8 offset-lg-2"> 
-        <!--$("#formulario [campo]")-->
-        <div class="row" id="formulario">  
+<form [formGroup]="formulario">
 
-            <div class="col-2 mt-1">
-                <label>Nombre</label>
-            </div>
-            <div class="col-10 mt-1">
-                <input type="text" class="form-control" campo="" id="nombre"/>
-            </div>
+    <div class="row">
+        <div class="col-sm-12 col-lg-8 offset-lg-2"> 
+            <!--$("#formulario [campo]")-->
+            <div class="row" id="formulario">  
 
-            <div class="col-2 mt-1">
-                <label>Direccion</label>
-            </div>
-            <div class="col-10 mt-1">
-                <input type="text" class="form-control" campo="" id="direccion"/>
-            </div>
+                <div class="col-2 mt-1">
+                    <label for="nombre">Nombre</label>
+                </div>
+                <div class="col-10 mt-1">
+                    <input type="text" class="form-control" id="nombre" formControlName="nombre"/>
+                </div>
 
-            <div class="col-2 mt-1">
-                <label>Telefono</label>
-            </div>
-            <div class="col-10 mt-1">
-                <input type="text" class="form-control" campo="" id="telefono"/>
-            </div>
-        
-            <div class="col-2 mt-1">
-                <label>Correo E</label>
-            </div>
-            <div class="col-10 mt-1">
-                <input type="text" class="form-control" campo="" id="correoE"/>
-            </div>                 
-        </div>         
+                <div class="col-2 mt-1">
+                    <label for="direccion">Direccion</label>
+                </div>
+                <div class="col-10 mt-1">
+                    <input type="text" class="form-control" id="direccion" formControlName="direccion"/>
+                </div>
+
+                <div class="col-2 mt-1">
+                    <label for="telefono">Telefono</label>
+                </div>
+                <div class="col-10 mt-1">
+                    <input type="text" class="form-control" id="telefono" formControlName="telefono"/>
+                </div>
+            
+                <div class="col-2 mt-1">
+                    <label for="correoE">Correo E</label>
+                </div>
+                <div class="col-10 mt-1">
+                    <input type="text" class="form-control" id="correoE" formControlName="correoE"/>
+                </div>                 
+            </div>         
+        </div>
     </div>
-</div>
+
+</form>
 
 <div class="row">
     <div class="col-sm-12 col-lg-8 offset-lg-2"> 
